fixed title display on small screens

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -2832,6 +2832,10 @@
 					padding: 0 0.5em;
 				}
 
+					#header h1 {
+						font-size: 0.55em;
+					}
+
 			}
 
 	@media screen and (max-width: 980px) {
@@ -3042,7 +3046,7 @@
 			}
 
 				#banner h1 {
-					font-size: 2.5em;
+					font-size: 1em;
 				}
 
 				#banner p {
@@ -3057,7 +3061,16 @@
 				padding: 6em 1.5em 4em 1.5em;
 			}
 
+				#banner h1 {
+					font-size: 1em;
+				}
+
+				#banner p {
+					font-size: .9em;
+				}
+
 		}
+
 
 /* Footer */
 
